kubernetes/c4-notify.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: c4-notify
    labels:
      app: c4-notify
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: c4-notify
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: c4-notify-env
    labels:
      app: c4-notify
  data:
    AMQP_URI: "amqp://guest:guest@rabbitmq.message.svc.cluster.local:5672/"
    MONGO_ADDRS: "mongo-notify-mongodb.database.svc.cluster.local"
    MONGO_DATABASE: "c4-notify-database"
    MONGO_USERNAME: "admin"
    MONGO_PASSWORD: "admin"
    PORT: "8080"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: c4-notify
    labels:
      version: v1
      app: c4-notify
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: c4-notify
    template:
      metadata:
        labels:
          version: v1
          app: c4-notify
      spec:
        containers:
        - name: c4-notify
          image: fernandocagale/c4-notify
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: c4-notify-virtual-service
  spec:
    hosts:
    - "*"
    gateways:
    - application-gateway-c4
    http:
    - match:
      - uri:
          prefix: /notify
      route:
      - destination:
          host: c4-notify
          port:
            number: 8080
